# healthcare-rag

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  run-local.sh
.github/workflows/: ci.yml
data/: synthetic_guidelines.md
scripts/: ingest_mimic.py
src/health_rag/: __init__.py  api.py  embeddings.py  llm.py  phi.py  pipeline.py  store.py
tests/: test_health_rag.py
workflows/: healthcare-rag.n8n.json
