[project]
name = "health_rag"
version = "0.1.0"
description = "Healthcare RAG on Claude with PHI redaction guardrails"
requires-python = ">=3.10"
dependencies = ["anthropic>=0.40", "fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2.6", "numpy>=1.26"]
[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27"]
[tool.ruff]
line-length = 100
[tool.pytest.ini_options]
pythonpath = ["src"]
